--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ stages:
     - ./_ci/install.sh _ci #updates
     - ./_ci/before_test.sh
   script:
-    - ${PREFIX}/bin/nosetest -sv bob
+    - ./bin/nosetests -sv bob
   after_script:
     - ./_ci/after_test.sh
 
