--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,8 @@ stages:
     - ./_ci/install.sh _ci #updates
     - ./_ci/before_test.sh
   script:
-    - ls
-    - ${PREFIX}./bin/nosetests -sv bob
+    - ls ./bin
+    - ./bin/nosetests -sv bob
   after_script:
     - ./_ci/after_test.sh
 
