Solving the doctest issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ stages:
     - ./_ci/build.sh
   after_script:
     - ./_ci/after_build.sh
+    - cp test.sh ./_ci 
   artifacts:
     expire_in: 1 week
     paths:
