Add python 3.6 CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -177,6 +177,24 @@ docs_linux_35:
     - conda-linux
 
 
+# Linux + Python 3.6: Builds and tests
+build_linux_36:
+  <<: *build_job
+  variables: &linux_36_build_variables
+    PYTHON_VERSION: "3.6"
+    WHEEL_TAG: "py3"
+  tags:
+    - conda-linux
+
+test_linux_36:
+  <<: *test_job
+  variables: *linux_36_build_variables
+  dependencies:
+    - build_linux_36
+  tags:
+    - conda-linux
+
+
 # Mac OSX + Python 2.7: Builds and tests
 build_macosx_27:
   <<: *build_job
@@ -209,5 +227,23 @@ test_macosx_35:
   variables: *macosx_35_build_variables
   dependencies:
     - build_macosx_35
+  tags:
+    - conda-macosx
+
+
+# Mac OSX + Python 3.6: Builds and tests
+build_macosx_36:
+  <<: *build_job
+  variables: &macosx_36_build_variables
+    PYTHON_VERSION: "3.6"
+    WHEEL_TAG: "py3"
+  tags:
+    - conda-macosx
+
+test_macosx_36:
+  <<: *test_job
+  variables: *macosx_36_build_variables
+  dependencies:
+    - build_macosx_36
   tags:
     - conda-macosx
