--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
-bob.extension == 2.4.5
-bob.blitz == 2.0.14
-bob.core == 2.1.9
-bob.io.base == 3.0.2
-bob.sp == 2.0.10
-bob.ap == 2.1.5
-bob.math == 3.0.0
-bob.measure == 2.4.1
-bob.db.base == 2.3.2
-bob.io.audio == 2.0.6
-bob.io.image == 2.3.0
-bob.io.video == 2.0.19
-bob.io.matlab == 2.0.10
-bob.ip.base == 2.1.0
-bob.ip.color == 2.0.10
-bob.ip.draw == 2.0.9
-bob.ip.gabor == 2.0.11
-bob.learn.activation == 2.0.10
-bob.learn.libsvm == 2.0.13
-bob.learn.linear == 2.1.2
-bob.learn.mlp == 2.1.6
-bob.learn.em == 2.1.0
-bob.learn.boosting == 2.0.13
-bob.db.iris == 2.1.1
-bob.db.wine == 2.0.9
-bob.db.mnist == 2.1.1
-bob.db.atnt == 2.0.10
-bob.ip.facedetect == 2.1.4
-bob.ip.optflow.hornschunck == 2.0.13
-bob.ip.optflow.liu == 2.0.12
-bob.ip.flandmark == 2.1.6
+bob.extension
+bob.blitz
+bob.core
+bob.io.base
+bob.sp
+bob.ap
+bob.math
+bob.measure
+bob.db.base
+bob.io.audio
+bob.io.image
+bob.io.video
+bob.io.matlab
+bob.ip.base
+bob.ip.color
+bob.ip.draw
+bob.ip.gabor
+bob.learn.activation
+bob.learn.libsvm
+bob.learn.linear
+bob.learn.mlp
+bob.learn.em
+bob.learn.boosting
+bob.db.iris
+bob.db.wine
+bob.db.mnist
+bob.db.atnt
+bob.ip.facedetect
+bob.ip.optflow.hornschunck
+bob.ip.optflow.liu
+bob.ip.flandmark
