--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,6 @@
 [buildout]
 parts = scripts
 eggs = bob
-       pkgtools
        bob.extension
        nose-exclude
 
@@ -23,3 +22,4 @@ newest = false
 
 [scripts]
 recipe = bob.buildout:scripts
+dependent-scripts = true
