--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,10 +23,8 @@ requirements:
     - python {{ python }}
     - setuptools {{ setuptools }}
     - bob-devel {{ bob_devel }}
-    # the list below contains all (public and private) packages. This is/should
-    # be the same list as order.txt in bob.nightlies. Please keep public and
-    # private packages list separate.
-    # Public packages:
+    # the list below contains all public packages. This is/should be the same
+    # list as order.txt (save for private packages) in bob.nightlies.
     - bob.buildout
     - bob.extension
     - bob.blitz
@@ -107,13 +105,6 @@ requirements:
     - bob.db.voxforge
     - bob.pad.base
     - bob.pad.face
-    # Private packages:
-    - bob.db.hkpu
-    - bob.db.thufvdt
-    - bob.db.mmcbnu6k
-    - bob.db.hmtvein
-    - bob.db.oulunpu
-    - bob.db.uvad
   run:
     - python
     - setuptools
