Update the buildout file

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,23 +1,13 @@
 ; vim: set fileencoding=utf-8 :
-; Andre Anjos <andre.anjos@idiap.ch>
-; Mon 16 Apr 08:29:18 2012 CEST
+; Wed Apr  4 15:29:11 CEST 2018
 
 [buildout]
 parts = scripts
-eggs = bob
-       bob.extension
-       nose-exclude
-
-extensions = bob.buildout
-
 develop = .
-
-; options for bob.buildout extension
-debug = false
-verbose = true
+eggs = envs
+extensions = bob.buildout
 newest = false
-
-[sources]
+verbose = true
 
 [scripts]
 recipe = bob.buildout:scripts
