--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,10 @@
 ; vim: set fileencoding=utf-8 :
-; Wed Apr  4 15:29:11 CEST 2018
+; Tue Apr 17 13:50:43 CEST 2018
 
 [buildout]
 parts = scripts
 develop = .
-eggs = envs
+eggs = bob
 extensions = bob.buildout
 newest = false
 verbose = true
