--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,81 @@
-bob.buildout == 2.1.6
-bob.extension == 2.5.0
-bob.blitz == 2.0.15
-bob.core == 2.2.0
-bob.io.base == 3.0.3
-bob.math == 3.1.1
-bob.measure == 3.0.0
-bob.io.image == 2.4.1
-bob.db.base == 3.0.0
-bob.io.video == 2.1.1
-bob.io.matlab == 2.0.11
-bob.io.audio == 2.0.7
-bob.sp == 2.0.11
-bob.ap == 2.1.6
-bob.ip.base == 2.2.1
-bob.ip.color == 2.0.11
-bob.ip.draw == 2.0.10
-bob.ip.gabor == 2.0.12
-bob.learn.activation == 2.0.11
-bob.learn.libsvm == 2.1.0
-bob.learn.linear == 2.1.3
-bob.learn.mlp == 2.1.7
-bob.learn.boosting == 2.0.14
-bob.db.iris == 2.1.2
-bob.learn.em == 2.1.1
-bob.db.wine == 2.0.10
-bob.db.mnist == 2.2.0
-bob.db.atnt == 2.0.11
-bob.ip.facedetect == 2.1.5
-bob.ip.optflow.hornschunck == 2.0.14
-bob.ip.optflow.liu == 2.0.13
-bob.ip.flandmark == 2.1.7
-gridtk == 1.6.1
-bob.ip.qualitymeasure == 1.1.0
-bob.ip.skincolorfilter == 0.0.4
-bob.ip.facelandmarks == 1.0.5
-bob.ip.dlib == 1.0.4
-bob.db.arface == 2.1.5
-bob.db.asvspoof == 1.2.0
-bob.db.asvspoof2017 == 1.1.0
-bob.db.atvskeystroke == 2.1.6
-bob.db.avspoof == 2.3.0
-bob.db.banca == 2.1.6
-bob.db.biosecure == 2.1.6
-bob.db.biosecurid.face == 2.1.9
-bob.db.casme2 == 2.1.6
-bob.db.caspeal == 2.1.6
-bob.db.cohface == 1.1.0
-bob.db.frgc == 2.1.4
-bob.db.gbu == 2.1.5
-bob.db.hci_tagging == 1.1.0
-bob.db.ijba == 2.1.0
-bob.db.kboc16 == 2.1.0
-bob.db.lfw == 2.1.6
-bob.db.livdet2013 == 2.1.0
-bob.db.mobio == 2.2.0
-bob.db.msu_mfsd_mod == 2.2.4
-bob.db.multipie == 2.1.5
-bob.db.nist_sre12 == 3.0.4
-bob.db.putvein == 1.3.0
-bob.db.replay == 3.0.4
-bob.db.replaymobile == 1.1.4
-bob.db.scface == 2.1.6
-bob.db.utfvp == 3.0.0
-bob.db.verafinger == 2.0.1
-bob.db.fv3d == 1.1.1
-bob.db.voicepa == 1.1.0
-bob.db.xm2vts == 2.1.5
-bob.db.youtube == 2.1.5
-bob.db.pericrosseye == 1.0.2
-bob.db.cuhk_cufs == 2.2.0
-bob.bio.base == 3.3.0
-bob.bio.gmm == 3.2.1
-bob.bio.face == 3.4.0
-bob.bio.spear == 3.2.0
-bob.bio.video == 3.4.1
-bob.bio.vein == 1.1.0
-bob.db.voxforge == 2.3.1
-bob.pad.base == 2.0.0
-bob.pad.face == 2.0.1
-bob.pad.vein == 1.0.0
+bob.buildout
+bob.extension
+bob.blitz
+bob.core
+bob.io.base
+bob.math
+bob.measure
+bob.io.image
+bob.db.base
+bob.io.video
+bob.io.matlab
+bob.io.audio
+bob.sp
+bob.ap
+bob.ip.base
+bob.ip.color
+bob.ip.draw
+bob.ip.gabor
+bob.learn.activation
+bob.learn.libsvm
+bob.learn.linear
+bob.learn.mlp
+bob.learn.boosting
+bob.db.iris
+bob.learn.em
+bob.db.wine
+bob.db.mnist
+bob.db.atnt
+bob.ip.facedetect
+bob.ip.optflow.hornschunck
+bob.ip.optflow.liu
+bob.ip.flandmark
+gridtk
+bob.ip.qualitymeasure
+bob.ip.skincolorfilter
+bob.ip.facelandmarks
+bob.ip.dlib
+bob.db.arface
+bob.db.asvspoof
+bob.db.asvspoof2017
+bob.db.atvskeystroke
+bob.db.avspoof
+bob.db.banca
+bob.db.biosecure
+bob.db.biosecurid.face
+bob.db.casme2
+bob.db.caspeal
+bob.db.cohface
+bob.db.frgc
+bob.db.gbu
+bob.db.hci_tagging
+bob.db.ijba
+bob.db.kboc16
+bob.db.lfw
+bob.db.livdet2013
+bob.db.mobio
+bob.db.msu_mfsd_mod
+bob.db.multipie
+bob.db.nist_sre12
+bob.db.putvein
+bob.db.replay
+bob.db.replaymobile
+bob.db.scface
+bob.db.utfvp
+bob.db.verafinger
+bob.db.fv3d
+bob.db.voicepa
+bob.db.xm2vts
+bob.db.youtube
+bob.db.pericrosseye
+bob.db.cuhk_cufs
+bob.bio.base
+bob.bio.gmm
+bob.bio.face
+bob.bio.spear
+bob.bio.video
+bob.bio.vein
+bob.db.voxforge
+bob.pad.base
+bob.pad.face
+bob.pad.vein
