Add test dependency of bob.io.video

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -149,6 +149,7 @@ test:
     - cmake
     - pkg-config
     - freetype
+    - psutil  # for bob.io.video
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   {% for package in resolved_packages('host') %}
