[conda] Implement conda builds for legacy bob-1.2.x

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -5,9 +5,13 @@ set(HDF5_FIND_COMPONENTS C CXX)
 include(FindHDF5)
 
 # netpbm
+if(WITH_NETPBM)
 include(netpbm.cmake)
-if(NOT NETPBM_FOUND)
-  message(FATAL_ERROR "netpbm has not been found.")
+  if(NOT NETPBM_FOUND)
+    message(FATAL_ERROR "netpbm has not been found.")
+  endif()
+else()
+  message(STATUS "netpbm modules DISABLED by user request")
 endif()
 
 # libjpeg
