--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,7 +14,7 @@ build:
     - cd {{ environ.get('RECIPE_DIR') + '/..' }}
     - mkdir build
     - cd build
-    - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=${PREFIX} -DPYTHON_VERSION=2.7 -DBOB_VERSION={{ version }} -DWITH_QT4=OFF -DWITH_NETPBM=OFF ..
+    - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=${PREFIX} -DPYTHON_VERSION=2.7 -DBOB_VERSION={{ version }} -DWITH_QT4=OFF ..
     - make VERBOSE=1 -j${CPU_COUNT} all
     - make VERBOSE=1 test nosetests sphinx-doctest
     - make VERBOSE=1 install
@@ -50,9 +50,6 @@ requirements:
     - matplotlib {{ matplotlib }}
     - fftw {{ fftw }}
     - openblas {{ openblas }}
-      #- netpbm
-      #- qt 4.8
-      #- doxygen
 
   run:
     - python
