--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
     - python3 bootstrap.py -vv channel base
     - source ${CONDA_ROOT}/etc/profile.d/conda.sh
     - conda activate base
-    - bdt ci build -vv
+    - bdt build -vv --ci --stable --variant-config-files=conda/conda_build_config.yaml --python=${PYTHON_VERSION} conda
     - bdt ci clean -vv
   cache: &build_caches
     paths:
@@ -63,7 +63,7 @@ build_linux_27:
     - python3 bootstrap.py -vv channel base
     - source ${CONDA_ROOT}/etc/profile.d/conda.sh
     - conda activate base
-    - bdt ci build -vv -m conda/conda_build_config.yaml
+    - bdt build -vv --ci --stable --variant-config-files=conda/conda_build_config.yaml --python=${PYTHON_VERSION} conda
     - bdt ci clean -vv
   artifacts:
     expire_in: 1 week
