--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,7 +13,7 @@ build:
     - make VERBOSE=1 all
     - make VERBOSE=1 test
     - make VERBOSE=1 install
-    - rm -rf ${PREFIX}/lib/python{{ python_version.replace('.', '') }}/site-packages/bob/visioner
+    - rm -rf ${PREFIX}/lib/python{{ python_version }}/site-packages/bob/visioner
     - install -d "${PREFIX}/share/doc/{{ name }}"
     - cp -R README.md COPYING python/doc "${PREFIX}/share/doc/{{ name }}/"
 
