[conda] Add reminder of c/c++ libraries as runtime deps

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -53,6 +53,18 @@ requirements:
   run:
     - python
     - boost
+    - jpeg
+    - giflib
+    - libtiff
+    - libmatio
+    - libpng
+    - vlfeat
+    - libsvm
+    - hdf5
+    - fftw
+    - openblas
+    - ffmpeg
+    - libblitz
     - {{ pin_compatible('numpy') }}
     - scipy
     - sqlalchemy
