--- a/pkgconfig/bob.pc.in
+++ b/pkgconfig/bob.pc.in
@@ -7,7 +7,7 @@ soversion=@BOB_SOVERSION@
 
 Name: bob
 Description: Bob is a free signal-processing and machine learning toolbox
-URL: http://idiap.github.io/bob
+URL: https://www.idiap.ch/software/bob
 Version: @BOB_VERSION@
 Requires:@BOB_PACKAGES@
 Libs:
