--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.rst
 recursive-include doc Makefile *.html *.ico *.pdf *.png *.py *.rst *.svg
-recursive-include bob *.bindata *.data *.gmm *.gz *.hdf5 *.jpg *.lst *.mat *.mov *.names *.out *.pbm *.pgm *.png *.ppm *.svmdata *.svmmodel *.tensor *.tensorfile *.ttf *.txt *.wav
+recursive-include bob *.bindata *.data *.gmm *.hdf5 *.jpg *.lst *.mat *.mov *.names *.out *.pbm *.pgm *.png *.ppm *.svmdata *.svmmodel *.tensor *.tensorfile *.ttf *.txt *.wav
