--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,8 +21,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - gcc
     - cmake {{ cmake }}
     - pkg-config {{ pkg_config }}
 
