[conda] Build in Release mode

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "bob" %}
-{% set build_type = "Debug" %}
+{% set build_type = "Release" %}
 {% set python_version = "2.7" %}
 
 package:
