--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,10 +14,9 @@ build:
     - make VERBOSE=1 test
     - make VERBOSE=1 install
     - cd {{ environ.get('RECIPE_DIR') + '/../python' }}
-    - PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:${PREFIX}/lib/pkgconfig python setup.py install --single-version-externally-managed --record record.txt
-    - cd ..
+    - PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:${PREFIX}/lib/pkgconfig python setup.py build --build-base=${SRC_DIR}/build install --single-version-externally-managed --record ${SRC_DIR}/record.txt
     - install -d "${PREFIX}/share/doc/{{ name }}"
-    - cp -R python/README.rst COPYING python/doc "${PREFIX}/share/doc/{{ name }}/"
+    - cp -R README.rst ../COPYING doc "${PREFIX}/share/doc/{{ name }}/"
 
 requirements:
   build:
