--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ build_linux_27:
   artifacts:
     expire_in: 1 week
     paths:
+      - sphinx
       - ${CONDA_ROOT}/conda-bld/linux-64/*.tar.bz2
 
 
