--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -133,8 +133,9 @@ test:
     - {{ name }}
   commands:
     # fix for the CONDA_BUILD_SYSROOT variable missing at test time
-    - export CONDA_BUILD_SYSROOT={{ CONDA_BUILD_SYSROOT }}  # [osx]
-    - export MACOSX_DEPLOYMENT_TARGET={{ MACOSX_DEPLOYMENT_TARGET }}  # [osx]
+    - export SDKROOT="{{ SDKROOT }}"  # [osx]
+    - export CONDA_BUILD_SYSROOT="{{ CONDA_BUILD_SYSROOT }}"  # [osx]
+    - export MACOSX_DEPLOYMENT_TARGET="{{ MACOSX_DEPLOYMENT_TARGET }}"  # [osx]
     - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }}
     - sphinx-build -aEW {{ project_dir }}/doc {{ project_dir }}/sphinx
     - sphinx-build -aEb doctest {{ project_dir }}/doc sphinx
