--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -132,11 +132,7 @@ test:
   imports:
     - {{ name }}
   commands:
-    # fix for the CONDA_BUILD_SYSROOT variable missing at test time
-    - export SDKROOT="{{ SDKROOT }}"  # [osx]
-    - export CONDA_BUILD_SYSROOT="{{ CONDA_BUILD_SYSROOT }}"  # [osx]
-    - export MACOSX_DEPLOYMENT_TARGET="{{ MACOSX_DEPLOYMENT_TARGET }}"  # [osx]
-    - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }} --exclude=bob.extension.test_extensions --exclude=bob.extension.test_cmake:test_library
+    - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }}
     - sphinx-build -aEW {{ project_dir }}/doc {{ project_dir }}/sphinx
     - sphinx-build -aEb doctest {{ project_dir }}/doc sphinx
     - conda inspect linkages -p $PREFIX {{ name }}  # [not win]
