--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -132,6 +132,8 @@ test:
   imports:
     - {{ name }}
   commands:
+    - export SDKROOT="{{ SDKROOT }}"  # [osx]
+    - export MACOSX_DEPLOYMENT_TARGET="{{ MACOSX_DEPLOYMENT_TARGET }}"  # [osx]
     - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }}
     - sphinx-build -aEW {{ project_dir }}/doc {{ project_dir }}/sphinx
     - sphinx-build -aEb doctest {{ project_dir }}/doc sphinx
